force-app/main/default/objects/Rejection__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF( Registration__r.RecordType.DeveloperName = &quot;Child Performer Services&quot;  || Registration__r.RecordType.DeveloperName = &quot;Entertainment Work&quot; ,

(Registration__r.Registration_Account__r.Mailing_Street__c +&quot; &quot;+ Registration__r.Registration_Account__r.Mailing_Address_Line_2__c +
BR()
+ Registration__r.Registration_Account__r.Mailing_City__c+&quot; &quot;+
TEXT(Registration__r.Registration_Account__r.Mailing_State__c)+&quot; &quot;+
Registration__r.Registration_Account__r.Mailing_Zip_Code__c)
,

(Registration__r.Mailing_Address_Line_1__c+&quot; &quot;+
Registration__r.Mailing_Address_Line_2__c+
BR()
+ Registration__r.Mailing_City__c+&quot; &quot;+
TEXT(Registration__r.Mailing_State__c)+&quot; &quot;+
Registration__r.Mailing_Postal_Code__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>