force-app/main/default/objects/Rejection__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rejections</relationshipLabel>
    <relationshipName>Rejections</relationshipName>
    <type>Lookup</type>
</CustomField>