force-app/main/default/objects/Rejection__c/fields/Days_to_Respond__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Respond__c</fullName>
    <formula>IF(CONTAINS(Registration_Type__c, &quot;Garment&quot;), 60, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Respond</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>