force-app/main/default/objects/Rejection__c/fields/Defect_Text_3__c.field-meta.xml
<CustomField>
    <fullName>Defect_Text_3__c</fullName>
    <formula>&quot;If you have submitted a paper application, your &quot;+ Registration_Type__c +&quot;  &quot;+ Registration__r.Application_Type__c +&quot; number &quot;+ Registration_Number__c +&quot; must be included on ALL items. If this number is not included, this alone will delay the processing of your application.&quot;
+BR()+BR()+
IF(Registration_Type__c = &quot;Car Wash&quot;, &quot;If you have any questions regarding the above, please call (510) 285-3502, email DLSELicensing@dir.ca.gov, or fax requested item(s) to &quot;,
IF(Registration_Type__c = &quot;Talent&quot;, &quot;If you have any questions regarding the above, please call (510) 285-3397, email DLSELicensing@dir.ca.gov, or fax requested item(s) to &quot;,
IF(Registration_Type__c = &quot;Garment&quot;, &quot;If you have any questions regarding the above, please call (510) 285-3398, email CPSLicensing@dir.ca.gov, or fax requested item(s) to &quot;,
IF(Registration_Type__c = &quot;Child Performer Services&quot;, &quot;If you have any questions regarding the above, please call (510) 285-2123, email DLSELicensing@dir.ca.gov, or fax requested item(s) to (510) 286-1366&quot;,
IF(Registration_Type__c = &quot;Janitorial&quot;, &quot;If you have any questions regarding the above, please call (510) 879-8333&quot;, &quot;&quot;)))))
+
IF(
AND(
Registration_Type__c = &quot;FLC&quot;, 
CONTAINS(Office__c, &quot;Fresno&quot;)), &quot;(559) 248-1893, email FLC@dir.ca.gov, or fax requested item(s) to &quot;, &quot;&quot;)
+
IF(
AND(
Registration_Type__c = &quot;FLC&quot;, 
CONTAINS(Office__c, &quot;Oakland&quot;)), &quot;(510) 285-3399, email FLC@dir.ca.gov, or fax requested item(s) to &quot;, &quot;&quot;)
+



IF(AND(CONTAINS(Office__c, &quot;Oakland&quot;), (Registration_Type__c &lt;&gt; &quot;Child Performer Services&quot;)), &quot;(510) 286-1366.&quot;,
IF(AND(CONTAINS(Office__c, &quot;Fresno&quot;), (Registration_Type__c &lt;&gt; &quot;Child Performer Services&quot;)), &quot;(559) 248-1895.&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defect Text 3</label>
    <type>Text</type>
</CustomField>