force-app/main/default/objects/Rejection__c/fields/DLSE_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>DLSE_Contact_Details__c</fullName>
    <description>Used to populate the header of defect letters (conga templates.)</description>
    <formula>&quot;State of California, &quot; &amp; $CustomMetadata.GovernorName__mdt.Governor_Full_Name.FirstName__c &amp; &quot; &quot; &amp; IF ( ISBLANK($CustomMetadata.GovernorName__mdt.Governor_Full_Name.MiddleInitial__c), &quot;&quot;, $CustomMetadata.GovernorName__mdt.Governor_Full_Name.MiddleInitial__c &amp;&quot; &quot;) &amp; $CustomMetadata.GovernorName__mdt.Governor_Full_Name.LastName__c &amp; IF ( ISBLANK ($CustomMetadata.GovernorName__mdt.Governor_Full_Name.Suffix__c), &quot;, Governor&quot; , &quot; &quot;&amp; $CustomMetadata.GovernorName__mdt.Governor_Full_Name.Suffix__c &amp; &quot;, Governor&quot;)
&amp;BR()&amp;
IF( Registration_Type__c &lt;&gt; &quot;Entertainment Work&quot;,
&quot;Department of Industrial Relations&quot;
&amp;BR()&amp;
&quot;Division of Labor Standards Enforcement&quot;
&amp;BR()&amp;
&quot;Registration Services Unit&quot;
&amp;BR()&amp;
&quot;1515 Clay Street, Ste. 1902&quot;
&amp;BR()&amp;
&quot;Oakland, CA 94612&quot;
&amp;BR()&amp;

&quot;Phone: &quot; &amp; Registration__r.Registration_Office_Telephone_Number__c
&amp;BR()&amp;
&quot;Fax: &quot; + Registration__r.Registration_Office_Fax_Number__c
,

&quot;Department of Industrial Relations&quot;
&amp;BR()&amp;
&quot;Division of Labor Standards Enforcement&quot;
&amp;BR()&amp;
&quot;Entertainment Work Permit Unit&quot;
&amp;BR()&amp;
&quot;6150 Van Nuys Blvd. #100&quot;
&amp;BR()&amp;
&quot;Van Nuys, CA 91401&quot;
&amp;BR()&amp;
&quot;Phone: &quot; &amp; Registration__r.Registration_Office_Telephone_Number__c
&amp;BR()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLSE Contact Details</label>
    <type>Text</type>
</CustomField>