force-app/main/default/objects/Rejection__c/fields/DLSE_Fax_Car_Wash__c.field-meta.xml
<CustomField>
    <fullName>DLSE_Fax_Car_Wash__c</fullName>
    <defaultValue>&quot;5102853502&quot;</defaultValue>
    <inlineHelpText>DLSE&#39;s current fax number for the Car Wash Dept. Change default value here to update contact details that populate defect letter headers.</inlineHelpText>
    <label>DLSE Fax - Car Wash</label>
    <type>Phone</type>
</CustomField>