force-app/main/default/objects/Rejection__c/fields/DLSE_Phone_Car_Wash__c.field-meta.xml
<CustomField>
    <fullName>DLSE_Phone_Car_Wash__c</fullName>
    <defaultValue>&quot;5102853502&quot;</defaultValue>
    <inlineHelpText>DLSE&#39;s current contact phone number for the Car Wash Dept. Change default value here to update contact details that populate defect letter headers.</inlineHelpText>
    <label>DLSE Phone - Car Wash</label>
    <type>Phone</type>
</CustomField>