force-app/main/default/objects/Rejection__c/fields/Final_Defect_Text__c.field-meta.xml
<CustomField>
    <fullName>Final_Defect_Text__c</fullName>
    <formula>IF(Registration_Type__c = &quot;Car Wash&quot;, &quot;If you have any questions regarding the above, please call (510) 285-3502 or email DLSELicensing@dir.ca.gov. &quot;, 
IF(Registration_Type__c = &quot;Talent&quot;, &quot;If you have any questions regarding the above, please call (510) 285-3397, email DLSELicensing@dir.ca.gov, or fax requested item(s) to &quot;, 
IF(Registration_Type__c = &quot;Garment&quot;, &quot;If you have any questions regarding the above, please call (510) 285-3398, email CPSLicensing@dir.ca.gov, or fax requested item(s) to &quot;, 
IF(Registration_Type__c = &quot;Child Performer Services&quot;, &quot;If you do not respond, your application will be rejected and you will forfeit your application fee.&quot;, 
IF(Registration_Type__c = &quot;FLC&quot;, &quot;If you have any questions regarding the above, please call &quot;, &quot;&quot;))))) 
+ 
IF( 
AND( 
Registration_Type__c = &quot;FLC&quot;, 
CONTAINS(Office__c, &quot;Fresno&quot;)), &quot;(559) 248-1893, email FLC@dir.ca.gov, or fax requested item(s) to &quot;, &quot;&quot;) 
+ 
IF( 
AND( 
Registration_Type__c = &quot;FLC&quot;, 
CONTAINS(Office__c, &quot;Oakland&quot;)), &quot;(510) 285-3399, email FLC@dir.ca.gov, or fax requested item(s) to &quot;, &quot;&quot;) 
/*+ 
IF(CONTAINS(Office__c, &quot;Oakland&quot;), &quot;(510) 286-1366.&quot;, 
IF(CONTAINS(Office__c, &quot;Fresno&quot;), &quot;(559) 248-1895.&quot;, &quot;&quot;)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Defect Text</label>
    <type>Text</type>
</CustomField>