force-app/main/default/objects/Rejection__c/fields/First_Defect_Intro_Text__c.field-meta.xml
<CustomField>
    <fullName>First_Defect_Intro_Text__c</fullName>
    <formula>&quot;We acknowledge the receipt of your application for a &quot;+ Registration_Type__c +&quot; registration. Your application was defected because it was missing required information. Please complete and return the following:&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Defect Intro Text</label>
    <type>Text</type>
</CustomField>