force-app/main/default/objects/Rejection__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <formula>Registration__r.Office__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office</label>
    <type>Text</type>
</CustomField>