force-app/main/default/objects/Rejection__c/fields/Original_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Original_Rejection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Rejection</label>
    <referenceTo>Rejection__c</referenceTo>
    <relationshipLabel>Rejections</relationshipLabel>
    <relationshipName>Rejections</relationshipName>
    <type>Lookup</type>
</CustomField>