force-app/main/default/objects/Rejection__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration</label>
    <referenceTo>License_Registration__c</referenceTo>
    <relationshipLabel>Rejections</relationshipLabel>
    <relationshipName>Rejections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>