force-app/main/default/objects/Rejection__c/fields/Registration_Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Registration_Community_URL__c</fullName>
    <formula>$Setup.Registration_KVS__c.Registration_Community_Base_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Community URL</label>
    <type>Text</type>
</CustomField>