force-app/main/default/objects/Rejection__c/fields/Rejection_Letter_Follow_Up_PDF__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Letter_Follow_Up_PDF__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a0n35000000K0rx&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;queryid=[Rejections]a0m350000002lLw,[RejectionDefect]a0m350000002lLx,[Manager]a0mt00000000sKt&quot; +
&quot;&amp;EmailTemplateId=[00Xr0000000MXml]&quot; +
&quot;&amp;EmailAdditionalTo=&quot; + Registration__r.Applicant__r.Email +
&quot;&amp;EmailRelatedToId=&quot; +  Registration__r.Id  +
&quot;&amp;qmode=SendEmail&quot; +
&quot;DS7=2&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejection Letter Follow Up PDF</label>
    <type>Text</type>
</CustomField>