force-app/main/default/objects/Rejection__c/fields/X2nd_Defect_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Defect_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2nd Defect Letter Sent?</label>
    <type>Checkbox</type>
</CustomField>