force-app/main/default/objects/Rejection__c/fields/X3rd_Defect_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Defect_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Defect Letter Sent?</label>
    <type>Checkbox</type>
</CustomField>